--- a/style/style.css
+++ b/style/style.css
@@ -237,3 +237,125 @@ font-family: 'Roboto', sans-serif;*/
     box-sizing: border-box;
     box-shadow: 0px 0px 56px rgba(255, 20, 105, 0.31);
 }
+
+
+/*WORKS*/
+
+.works {
+    background: linear-gradient(360deg, #2B1D3E 0%, #161630 100%);
+    height: 50vw;
+    width: 100vw;
+    position: relative;
+    top: 50vw;
+}
+
+.title-hr-work {
+    height: 0.15vw;
+    top: 0vw;
+    position: relative;
+    width: 0vw;
+    border-radius: 1vw;
+    color: white;
+    background: white;
+    transition: 0.4s;
+}
+
+.works:hover .title-hr-work {
+    width: 10vw;
+    background: #FF1469;
+}
+
+.work-sorter {
+    position: relative;
+    left: 10vw;
+    top: 5vw;
+}
+
+.work-sorter button {
+    border: 0.1vw solid #FF1469;
+    background: transparent;
+    color: white;
+    font-size: 1vw;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
+    transition: 0.4s;
+    border-radius: 1.5vw;
+    margin-right: 1vw;
+    padding: 0.4vw 1.5vw 0.4vw 1.5vw;
+}
+
+.work-sorter button:hover {
+    background: #FF1469;
+}
+
+.work-cards {
+    position: relative;
+    top: 10vw;
+    left: 10vw;
+    margin-bottom: 1.5vw;
+    width: 80vw;
+}
+
+.work-card {
+    transition: 0.4s;
+    height: 13vw;
+    position: relative;
+    margin-right: 2vw;
+}
+
+.work-card-img {
+    border-radius: 1.5vw;
+    width: 24vw;
+    height: 13vw;
+    transition: 0.4s;
+}
+
+.work-card:hover .work-card-img {
+    filter: brightness(0.3);
+}
+
+.work-card:hover {
+    transform: rotate(2deg) scale(1.1);
+}
+
+.work-card-title {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    font-size: 1.6vw;
+    color: white;
+    position: relative;
+    bottom: 5.5vw;
+    left: 2vw;
+    display: none;
+}
+
+.work-card-desc {
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    font-size: 1.3vw;
+    color: white;
+    position: relative;
+    bottom: 6vw;
+    left: 2vw;
+    display: none;
+}
+
+.work-done {
+    position: relative;
+    width: 1.5vw;
+    bottom: 18.5vw;
+    left: 22vw;
+    display: none;
+}
+
+.work-card:hover .work-card-title {
+    display: flex;
+}
+
+.work-card:hover .work-card-desc {
+    display: flex;
+}
+
+.work-card:hover .work-done {
+    display: flex;
+}
